# Frankenstein

./: docker-compose.yml
client/: Dockerfile  package-lock.json  package.json  vite.config.ts
server/: Dockerfile  database.py  main.py  pyproject.toml
server/routers/: __init__.py
