[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Abhishek Bhaskar <abhishk.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.29.0"
SQLAlchemy = "^2.0.30"
structlog = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
